--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<title>Color Game</title>
 </head>
 <body>
-	<h1>Welcome To DevOps Training In Telugu Batch 20 & 21</h1>
-	<h1>Ansible Playbook Testing With Tags</h1>
+	<h1>Welcome To Vinay kedhari DevOps project</h1>
+	<h1>Thanks for Visiting</h1>
 	<div id="smallcont">
 		<div></div>
 		<div id="try1">Lets Play</div>
