--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Color Game</title>
 </head>
 <body>
-	<h1>Welcome To Vinay kedhari DevOps project</h1>
+	<h1>Welcome To Vinay Kumar DevOps project</h1>
 	<h1>Thanks for Visiting</h1>
 	<div id="smallcont">
 		<div></div>
